--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -4,7 +4,55 @@
 %% Created for Tuomas Eerola at 2025-03-07 13:46:46 +0000 
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
+
+@article{grekow2021music,
+  title={Music emotion recognition using recurrent neural networks and pretrained models},
+  author={Grekow, Jacek},
+  journal={Journal of Intelligent Information Systems},
+  volume={57},
+  number={3},
+  pages={531--546},
+  year={2021},
+  publisher={Springer}
+}
+
+@incollection{song2018audio,
+  title={Audio classification tasks using recurrent neural network},
+  author={Song, Guangxiao and Ding, Shenyi and Wang, Zhijie},
+  booktitle={MIREX 2018-Music Information Retrieval Evaluation eXchange},
+  year={2018}
+}
+
+@incollection{bovcondemoc,
+  title={DEMOC-A deep audio mood classification method},
+  author={Bovcon, Borja and Marolt, Matija}
+  booktitle={MIREX 2017-Music Information Retrieval Evaluation eXchange},
+  year={2017}
+}
+
+@inproceedings{lin2009eeg,
+  title={EEG-based emotion recognition in music listening: A comparison of schemes for multiclass support vector machine},
+  author={Lin, Yuan-Pin and Wang, Chi-Hong and Wu, Tien-Lin and Jeng, Shyh-Kang and Chen, Jyh-Horng},
+  booktitle={2009 IEEE international conference on acoustics, speech and signal processing},
+  pages={489--492},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{tzanetakis2007marsyas,
+  title={Marsyas submissions to MIREX 2007},
+  author={Tzanetakis, George},
+  booktitle={MIREX 2007-Music Information Retrieval Evaluation eXchange},
+  year={2007}
+}
+
+@incollection{mandel2007labrosa,
+  title={LABROSA’s audio music similarity and classification submissions},
+  author={Mandel, M and Ellis, D},
+  journal={MIREX 2007-Music Information Retrieval Evaluation eXchange},
+  year={2007}
+}
 
 @inproceedings{mashao2003co,
   title={Comparing SVM and GMM on parametric feature-sets},
