Some bibtex fixes and wrote missing parts in the introduction

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -47,6 +47,9 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ## set options ##
 ```
 
+<!-- ACM Computing Surveys: Shorter survey papers should be self-contained and not exceed 15 pages in length including references. -->
+
+
 # Introduction
 
 Emotional engagement is a key reason why people engage with music in their every day activities, and it is also why music is increasingly being used in various health applications [@juslin2022emotions; @agres2021music]. In recent years, significant advances have been made in music information retrieval, particularly in music emotion recognition (MER) tasks [@gomez2021; @panda2020audio]. Improvements in available features, modeling techniques, and datasets have provided the field with opportunities to enhance the accuracy and reliability of predicting annotated emotions from audio. Over the past 25 years, numerous studies have established the types of emotions that listeners perceive and recognize in music. In the last 15 years, research has increasingly focused on tracing these recognized emotions back to specific musical components, such as expressive features [@lindstrom2003expressivity], structural aspects of music [@eerola_friberg_bresin_2013; @anderson2022ex; @grimaud_eerola_2022], acoustic features [@yang2008; @panda2013multi; @saari_et_al_2015; @eerola2011c; @panda2020audio], or emergent properties revealed through deep learning techniques [@er2019music; @sarkar2020recognition].
@@ -71,34 +74,34 @@ Across regression and classification paradigms, a wide range of models have been
 
 ## Large vs. small data
 
-MER tasks commonly apply regression and classification techniques to diverse datasets with features drawn from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including MediaEval [@soleymani20131000], DEAM [@aljanaki2017developing], and AMG1608[@chen2015amg1608]. These datasets represent Western pop music, are moderate in terms of the size (containing from 744 to 1802 music excerpts) and have been manually annotated by a relatively large number of participants (either by experts, students, or crowdsourced workers). Many datasets include audio features analyzed with software toolboxes for audio analysis such as OpenSMILE [@] and MIRToolbox [@lartillot2007matlab]---enabling models that predict ratings using tens, or even hundreds, of audio features. Large datasets are ideal for generalizing predictions across diverse musical samples and are commonly employed in machine learning applications focused on maximizing accuracy of a MER system. 
+MER tasks commonly apply regression and classification techniques to diverse datasets with features drawn from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including MediaEval [@soleymani2013], DEAM [@aljanaki2017developing], and AMG1608 [@chen2015amg1608]. These datasets represent Western pop music, are moderate in terms of the size (containing from 744 to 1802 music excerpts) and have been manually annotated by a relatively large number of participants (either by experts, students, or crowdsourced workers). Many datasets include audio features analyzed with software toolboxes for audio analysis such as OpenSMILE [@eyben2010opensmile] and MIRToolbox [@lartillot2007matlab] -- enabling models that predict ratings using tens, or even hundreds, of audio features. Large datasets are ideal for generalizing predictions across diverse musical samples and are commonly employed in machine learning applications focused on maximizing accuracy of a MER system. 
 
 Although training MER systems with a wide range of stimuli and features can be useful for generalizable and accurate modeling, small datasets can be more appropriate in explorations that require precise control of stimuli or analyzed features to understand a model's performance. For example,  @griffiths2021am evaluated a MER model's performance when predicting 20 tracks different genres, validating the model on another 40 tracks. @saizclar2022pr evaluated how onset curves (changes in the energy of a note starting from its onset) can be incorporated into a predictive framework using 40 short (8-12s) piano excerpts. Smaller datasets are also useful in studies attempting to explain how stimulus qualities such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in] affect ratings of valence and arousal. Although these studies are not always designed with MER applications in mind, their similar framework has enabled direct application [e.g., @chowdhury2021perceived]. 
 
-## The semantic gap in MER / What are the reported standards? / ceiling
+## The current benchmarks of MER
 
 ```{=html}
 <!--
-- Wide range of MER models attempting to outperform previous benchmarks, comparing performance against baseline models
-- Introduce ceilings for classification, valence, and arousal, citing Barthet study
-- Citing what some researchers attribute limitations to (e.g., lower valence than arousal)
-- MIR discussions of "semantic" challenge
-- inherent error in all stages (annotation, features, models)
+- Wide range of MER models attempting to outperform previous benchmarks, comparing performance against baseline models [MENTIONED NOW]
+- Introduce ceilings for classification, valence, and arousal, citing Barthet study [MENTIONED]
+- Citing what some researchers attribute limitations to (e.g., lower valence than arousal) [MENTIONED]
+- MIR discussions of "semantic" challenge [LEFT OUT NOW, GLASS-CEILING]
+- inherent error in all stages (annotation, features, models) [MENTIONED]
 - Due to wide range of approaches, difficult to evaluate how successful attempts to raise glass ceiling have been
 - How do modeling techniques, and the number of features used affect performance? Which combinations perform best?
 
 -->
 ```
 
-Researchers have attempted to identify new feature sets with greater relevance to emotion [@panda2020audio; @chowdhury2021perceived], combine low-, mid-, and high-level features using multimodal data [@celma_foafing_2006], or train neural networks to automatically learn features from audio [@zhang2016br;@alvarez2023ri;@agarwal2021an]. Through these approaches, MER researchers attempt to shatter a so-called *glass ceiling* [@downie_music_2008] by establishing central predictors for emotions. To date, however, no study has systematically compared results of these diverse approaches.
+Prediction accuracy in MER tasks has improved as datasets and models have become more sophisticated; The regression models for arousal/valence was 58%/28% in 2008 [@yang2008], 70%/26% in 2010 [@huq2010automated], to 67%/46% in 2021 [@yang2021an]. The classification rates have similarly increased from 53% [@downie_music_2008] to 70% [@park2017representation] to 83% [@sarkar2020recognition] in the same period. Comparing these past efforts is challenging due to inconsistencies in metrics, modelling architectures, datasets, and model evaluation criteria. While we assume that overall accuracy has improved significantly over the past decade, predicting valence remains more challenging than predicting arousal.  
 
-<!-- added more recent references to make the neural network mention more up to date, TE 19/3/2025 -->
+Researchers have sought to enhance emotion prediction by identifying more relevant feature sets [@panda2020audio; @chowdhury2021perceived], integrating low-, mid-, and high-level features through multimodal data [@celma_foafing_2006], and leveraging neural networks to learn features directly from audio [@zhang2016br; @alvarez2023ri; @agarwal2021an]. These approaches aim to overcome what has been described as a *glass ceiling* in MER research [@downie_music_2008] -- a limitation sometimes referred to as the *semantic gap* [@wiggins_semantic_2009]. However, this ceiling may be better understood as an inherent measurement error arising from annotations, feature representations, and model limitations. While isolating the sources of these errors remains infeasible at this stage, comparing success rates across modeling techniques, feature set sizes, and other meaningful factors offers a step toward addressing this challenge. To date, however, no study has systematically compared the results of the diverse approaches employed in MER research. 
 
 ## Aims
 
 <!--This paragraph now is somewhat inconsistent with the analyses we actually perform motivating the journal/feature N/model discussion-->
 
-Our aim is to evaluate the predictive accuracy of two models of emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent studies to identify the overall success rate in MER tasks and the key factors such as modeling techniques, the number of features, or the inferential goal (explanation vs prediction) that might contribute to the prediction accuracy of the models. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years. Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model. 
+Our aim is to evaluate the predictive accuracy of two types emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent studies to identify the overall success rate in MER tasks and the key factors such as modeling techniques, the number of features, or the inferential goal (explanation vs prediction) that might contribute to the prediction accuracy of the models. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years. Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model. In terms of the modelling techniques and the number of features, a reasonable hypothesis is that advanced techniques (e.g., neural networks) and larger amount of features will lead to higher prediction rates than conventional techniques (e.g., logistic regression or linear regression) and smaller amount of features. However, this relationship might not be as straightforward as this due to the demands complex models place on dataset size [@alwosheel2018;@sun2017revisiting].
 
 <!-- incorporate splits into above? -->
 
@@ -359,16 +362,9 @@ Future reports should contain viable information about the data, models, and suc
 
 It would be also highly beneficial to share models and features transparently. If a study relies on published datasets, as most do, sharing the actual model (as code/notebooks) and features would allow for a more direct comparison of model techniques for the same dataset. Also, not all datasets are shared [@akiki2021; @santana2020; @hizlisoy2021mu; @zhang2017fe], or at least the sharing is only done partially. Standardizing reporting of datasets to include subsections explaining detailed information about stimuli (including genre, duration, sampling rate, and encoding format), features (types, extraction/analysis software, quantity of features, transformations, reduction methods), and models (types, tuning parameters, cross-validation) will enable more accurate comparisons between studies. The reporting in @grekow2018au serves as a useful example by providing enough detail in these areas to facilitate reproducibility. Although copyright restrictions may limit the sharing of some datasets, features and examples should be made available.
 
-```{=html}
-<!-- Question to Cameron: Could you add some of the studies included in the meta-analysis in the references to those studies that do not share datasets to make this more relevant. I just copied two references that I know are examples of datasets that require extra steps, but we have studies where we just don't even know whether the data is available, right? 
-
-CA: I've added some studies now, though these were excluded from the final meta-analysis. I also have a few examples of those which were included in the final results based on scrolling through the articles. Many are psychology papers, where it seems less common to share data publicly, but those also tend to have more case-specific goals rather than comparing results to existing benchmarks, so I didn't cite them. @hizlisoy2021mu proposes a new turkish music database, but I wasn't able to find the data from the article, so I added that. @zhang2017fe uses a dataset but doesn't seem to provide information on how to access it.
-TE: great, well done, job done. -->
-```
-
 <!-- ### Feature definition/validations -->
 
-One of the crucial aspects of modeling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data. For reference, the size of the datasets in MER are currently comparable to dataset sizes for modeling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. Datasets of these magnitudes seem to be required for appropriate utilisation of deep learning algorithms, which may explain the modest results observed in the music emotion recognition studies.
+One of the crucial aspects of modeling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data . For reference, the size of the datasets in MER are currently comparable to dataset sizes for modeling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. Datasets of these magnitudes seem to be required for appropriate utilisation of deep learning algorithms [@alwosheel2018;@sun2017revisiting], which may explain the modest results observed in the music emotion recognition studies.
 
 <!-- ### Validation -->
 
@@ -382,11 +378,7 @@ At present, the majority of the datasets are Western pop, which represent only a
 
 Finally, we note that the relevance of the emotion frameworks used in MER is not always explicitly discussed. The majority of studies rely either on valence and arousal or some combination of basic emotion categories. However, these frameworks may have limited usefulness for some practical applications that aim to capture experiences with music that are more aligned with models of music-induced emotions such as GEMS by @zentner2008emotions or AESTHEMOS [@schindler2017me], or what emotions music are shown to be able to express [@eerola2025what], or what are assumed to be worthwhile clusters of concepts (moods, emotions, tags) from crowdsourced, non-theory driven data [@saari_et_al_2015].
 
-## Implications and conclusion
-
 The present meta-analysis demonstrates that significant progress has been made toward developing accurate and scalable MER models over the past decade. Future efforts should prioritize feature validation, standardized reporting, the construction of larger and more diverse datasets, and the transparent sharing of research materials to ensure further consistent improvements in MER.
-
-<!-- This last section needs to be expanded. Or text moved from above to here? -->
 
 ### Funding statement
 
